# Gos

./: CMakeLists.txt  README.md
examples/: logs.txt
logs_reader/: logs_graph.cpp  logs_graph.h
logs_reader/proto/: graph.pb.cc  graph.pb.h
proto/: CMakeLists.txt  graph.proto
